feat: LAB blood analysis, Staff Reports, CORS config